--- a/HTML assignment/README
+++ b/HTML assignment/README
@@ -1,5 +1,3 @@
 things left to do
-1. change font
-2. Table: change colomun color in head, but not in the tail
-3. Form: make space between elemnts
-4. Image: alinment are ok?
+...
+done for now
